
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int KeyTyped ;
 scalar_t__ char_avail () ;
 scalar_t__ p_lz ;

int
messaging()
{
    return (!(p_lz && char_avail() && !KeyTyped));
}
